# FrameAndUtils

./: README.md  build.gradle  config.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
baselib/: CMakeLists.txt  build.gradle
baselib/src/androidTest/java/com/base/baselib/: ExampleInstrumentedTest.java
baselib/src/main/: AndroidManifest.xml
baselib/src/main/cpp/: native-lib.cpp
baselib/src/main/java/com/base/baselib/: BaseApplication.java  ImgUtils.java
baselib/src/main/java/com/base/baselib/base/: SimpleActivity.java  SimpleFragment.java
baselib/src/main/java/com/base/baselib/base/mvp/: IBasePresenter.java  IBaseView.java  MultipleMvpPresenter.java  MvpBaseActivity.java  MvpBaseFragment.java  MvpBasePresenter.java
baselib/src/main/java/com/base/baselib/permission/: PermissionAspect.java  PermissionRequestActivity.java
baselib/src/main/java/com/base/baselib/permission/annotation/: NeedPermission.java  PermissionCanceled.java  PermissionDenied.java
baselib/src/main/java/com/base/baselib/permission/bean/: CancelBean.java  DenyBean.java
baselib/src/main/java/com/base/baselib/permission/interf/: IPermission.java  ISetting.java
baselib/src/main/java/com/base/baselib/permission/support/: Default.java
baselib/src/main/java/com/base/baselib/permission/util/: PermissionUtil.java
baselib/src/test/java/com/base/baselib/: AlgLearn.java  ExampleUnitTest.java
compoentone/: build.gradle
compoentone/src/main/: AndroidManifest.xml
compoentone/src/main/release/: AndroidManifest.xml
(+39 files in other folders)
